#WIP-32 | Property fields update
