# src/property/api/filters.py
@@ -18,6 +18,16 @@ class PropertyFilter(django_filters.FilterSet):
             "number_of_bathroom",
             "number_of_balcony",
             "number_of_car_parking",
+            "balcony_direction",
+            "main_door_direction",
+            "unit_position",
+            "have_access_to_BTS_or_MRT",
+            "have_access_to_ARL",
+            "have_tenant_occupied",
+            "have_vacant",
+            "have_owner_occupied",
+            "have_bathtub",
+            "have_duplex",
             "building__quota",
             "building__furnishing",
             "building__have_freehold",
